update templates UI

--- a/templates/layout/_header.html
+++ b/templates/layout/_header.html
@@ -20,7 +20,7 @@
 <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="navbar-brand" href="/"> 默认页 </a>
+        <a class="navbar-brand" href="/"> 返回主页 </a>
       </li>
     </ul>
   </div>
