--- a/templates/flowers/flowers_list.html
+++ b/templates/flowers/flowers_list.html
@@ -1,6 +1,7 @@
 {{ define "flowers/flowers_list.html" }}
 {{ template "layout/_header.html" .}}
 {{ template "layout/_footer.html" .}}
+<h2>{{ .serverf }}</h2>
 <ul class="list-group list-group-flush">
 {{ end }}
 </ul>
